refactor: Replace inline styles with CSS classes for CSP

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'"
+      content="default-src 'self'; script-src 'self'; style-src 'self'"
     />
     <meta
       http-equiv="X-Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'"
+      content="default-src 'self'; script-src 'self'; style-src 'self'"
     />
     <title>UA2430 Test Interface</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <h1>UA2430 Test Interface</h1>
