Added DIO input functionality

--- a/index.html
+++ b/index.html
@@ -18,9 +18,22 @@
     <h1>UA2430 Test Interface</h1>
     
     <button id="runTestBtn">Run UA2430 Test</button>
+    <button id="stopPollBtn">Stop Polling</button>
 
     <h2>Results:</h2>
     <pre id="resultsOutput">Click the button to run the test.</pre>
+
+    <h2>Discrete Inputs:</h2>
+    <div id="discrete-inputs-container">
+      <span id="discrete-in-0">DIO 0: ---</span>
+      <span id="discrete-in-1">DIO 1: ---</span>
+      <span id="discrete-in-2">DIO 2: ---</span>
+      <span id="discrete-in-3">DIO 3: ---</span>
+      <span id="discrete-in-4">DIO 4: ---</span>
+      <span id="discrete-in-5">DIO 5: ---</span>
+      <span id="discrete-in-6">DIO 6: ---</span>
+      <span id="discrete-in-7">DIO 7: ---</span>
+    </div>
 
     <!-- Added script link to renderer.js -->
     <script defer src="renderer.js"></script>
