updated discrete UI

--- a/index.html
+++ b/index.html
@@ -24,15 +24,39 @@
     <pre id="resultsOutput">Click the button to run the test.</pre>
 
     <h2>Discrete Inputs:</h2>
-    <div id="discrete-inputs-container">
-      <span id="discrete-in-0">DIO 0: ---</span>
-      <span id="discrete-in-1">DIO 1: ---</span>
-      <span id="discrete-in-2">DIO 2: ---</span>
-      <span id="discrete-in-3">DIO 3: ---</span>
-      <span id="discrete-in-4">DIO 4: ---</span>
-      <span id="discrete-in-5">DIO 5: ---</span>
-      <span id="discrete-in-6">DIO 6: ---</span>
-      <span id="discrete-in-7">DIO 7: ---</span>
+    <div id="discrete-inputs-container" class="dio-container">
+      <div id="discrete-in-0" class="dio-indicator">
+        <span class="dio-label">DIO 0:</span>
+        <span class="dio-status">---</span>
+      </div>
+      <div id="discrete-in-1" class="dio-indicator">
+        <span class="dio-label">DIO 1:</span>
+        <span class="dio-status">---</span>
+      </div>
+      <div id="discrete-in-2" class="dio-indicator">
+        <span class="dio-label">DIO 2:</span>
+        <span class="dio-status">---</span>
+      </div>
+      <div id="discrete-in-3" class="dio-indicator">
+        <span class="dio-label">DIO 3:</span>
+        <span class="dio-status">---</span>
+      </div>
+      <div id="discrete-in-4" class="dio-indicator">
+        <span class="dio-label">DIO 4:</span>
+        <span class="dio-status">---</span>
+      </div>
+      <div id="discrete-in-5" class="dio-indicator">
+        <span class="dio-label">DIO 5:</span>
+        <span class="dio-status">---</span>
+      </div>
+      <div id="discrete-in-6" class="dio-indicator">
+        <span class="dio-label">DIO 6:</span>
+        <span class="dio-status">---</span>
+      </div>
+      <div id="discrete-in-7" class="dio-indicator">
+        <span class="dio-label">DIO 7:</span>
+        <span class="dio-status">---</span>
+      </div>
     </div>
 
     <!-- Added script link to renderer.js -->
