--- a/index.html
+++ b/index.html
@@ -30,9 +30,12 @@
              <!-- DIO Tab Pane -->
             <div class="tab-pane fade show active" id="dio-tab-pane" role="tabpanel" aria-labelledby="dio-tab" tabindex="0">
                 <h2 class="mt-3">Discrete I/O Status</h2>
-                <div class="row mt-3">
-                    <div class="col">
-                        <button id="refresh-dio" class="btn btn-primary">Refresh DIO Status</button>
+                <div class="row mt-3 align-items-center"> <!-- Use align-items-center for vertical alignment -->
+                    <div class="col-auto"> <!-- Use col-auto to fit button width -->
+                        <!-- Changed button ID and text -->
+                        <button id="toggle-dio-polling" class="btn btn-warning">Stop Polling</button>
+                    </div>
+                    <div class="col"> <!-- Let span take remaining width -->
                         <span id="dio-last-updated" class="ms-3 text-muted"></span>
                     </div>
                 </div>
@@ -47,10 +50,15 @@
             <!-- ARINC Receive Tab Pane -->
             <div class="tab-pane fade" id="arinc-rx-tab-pane" role="tabpanel" aria-labelledby="arinc-rx-tab" tabindex="0">
                 <h2 class="mt-3">ARINC 429 Receive Status</h2>
+                <!-- Add Test Button -->
+                <div class="my-3">
+                    <button id="generate-mock-arinc" class="btn btn-secondary btn-sm">Generate Mock Data</button>
+                </div>
+                <!-- End Test Button -->
                 <div id="arinc-rx-status" class="mt-3">
                     <!-- ARINC Receive content will be generated here by renderer.js -->
                     <div class="arinc-channels-container">
-                        </div>
+                    </div>
                 </div>
                  <div id="arinc-rx-error" class="mt-3 alert alert-danger" style="display: none;">
                     <!-- Error messages will be displayed here -->
